--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -131,11 +131,14 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                         body main .bemVindo .vitrine .formularios .formularioGeral .inputMesmaLinha .complemento:not(:placeholder-shown) + label {opacity: 1; visibility: visible; top: -12px; left: 40%; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px;}
 
             /* Tabela consultar Geral */
-            body main .bemVindo .vitrine .formularios .tabelaGeral { text-transform: capitalize;}
-                body main .bemVindo .vitrine .formularios .tabelaGeral table {margin:25px 20px;}
-                    body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td, 
-                    body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr th {border-bottom: solid 1px #4293E0; padding: 2px 10px; max-width: 190px; font-size: 13px;}
-                        body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td:nth-child(3) {max-width: 290px;}
+            body main .bemVindo .vitrine .formularios .tabelaGeral { text-transform: capitalize; padding-top: 25px;}
+                body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td, 
+                body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr th {border-bottom: solid 1px #4293E0; padding: 2px 10px; max-width: 190px; font-size: 13px;}
+                    body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td:nth-child(3) {max-width: 290px;}
+                        body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td button {cursor: pointer; padding-top: 6px; width: 100%; display: flex; justify-content: center;}
+                                body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td button svg {color: #6a7071; transition: all 0.5s ease-in-out;}
+                                    body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td button:hover svg {color: #ff0404;}
+
 
             /* Tabela da Sessão Histórico de Pagamento */
             body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento {width: 100%; text-align: center;}
@@ -144,17 +147,17 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                     body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento tbody tr td button:hover {background-color: #101A28; color: #EDEFEF;}
 
             /* Tabela consultar Clientes*/
-            body main .bemVindo .vitrine .formularios .tabelaConsultarClientes {width: 95%; margin-top: 35px;}
+            body main .bemVindo .vitrine .formularios .tabelaConsultarClientes {width: 95%;}
                 body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody {width: 100%;}
                     body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr th,
                     body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td {font-size: 12px; text-align: center;}
-                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(2) {/*width: 100%;*/ max-width: 200px}
-                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(3) {/*width: 100%;*/ max-width: 230px}
-                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(4) {/*width: 100%;*/ max-width: 113px}
-                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(5) {/*width: 100%;*/ max-width: 138px}
-                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(6) {/*width: 100%; */max-width: 220px}
-                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(7) {/*width: 100%; */max-width: 100px}
-
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(2) {max-width: 200px;}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(3) {max-width: 230px;}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(4) {max-width: 113px;}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(5) {max-width: 138px;}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(6) {max-width: 220px;}
+                        body main .bemVindo .vitrine .formularios .tabelaConsultarClientes tbody tr td:nth-child(7) {width: 10%;}
+                           
                 /* Sessão - realizar vendas */
                 body main .bemVindo .vitrine .formularios .formularioRealizarVenda {width: 90%;}
                     body main .bemVindo .vitrine .formularios .formularioRealizarVenda .inputMesmaLinha .containerInputLabel {position: relative; display: flex; margin-right: 17px; width: 100%;}
@@ -192,15 +195,16 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                             body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td {text-align: left;}
                                 body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(1) {width: 25%;}
                                 body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(2) {width: 19%;} 
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(3) {width: 10%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(3) {width: 11%;}
                                 body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(4) {width: 5%;}
                                 body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(5) {width: 20%;}
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(6) {width: 10%;}
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(7) {width: 11%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(6) {width: 11%;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr th:nth-child(7) {width: 11%; }
 
-                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button {border: none;border-radius: 10px; padding: 5px; text-transform: uppercase; font-weight: 500; cursor: pointer; transition: all 0.5s ease; font-size: 12px;}
-                                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button:hover {background-color: transparent; color: #ff0404;}
-                                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button em {color: #ff0404; font-weight: bold;}
+                                body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button {border: none;}
+                                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button:hover {background-color: #fff;}
+                                    body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button svg {color: #6a7071; cursor: pointer; transition: all 0.5s ease; border: none;}
+                                        body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .tabelaVenda tbody tr td button:hover svg {color: #ff0404;}
                         
                         body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .valorTotal {text-transform: uppercase; margin-bottom: 20px; padding-bottom: 15px; border-bottom: solid 1px lightgrey; font-size: 16px; text-align: right;}
                             body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .valorTotal em {font-weight: bold;}
