--- a/media/css/estilosLogin.css
+++ b/media/css/estilosLogin.css
@@ -33,6 +33,14 @@ body {display: flex; padding: 55px 35px; background-color: #0093E9; background-i
                 body .telaLogin .login form textarea:not(:placeholder-shown) + label,
                 body .telaLogin .login form input:not(:placeholder-shown) + label {opacity: 1; visibility: visible; top: -50px; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px; left: 5px;}
 
-            body .telaLogin .login button {width: 100%; height: 40px; color: #fff; font-weight: 500; margin-top: 20px; border-radius: 8px; background-color: #0093E9; background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%); cursor: pointer; transition: all ease-in 0.5s;}
-                body .telaLogin .login button:hover {filter: brightness(110%);}
+            body .telaLogin .login form button {width: 100%; height: 40px; color: #fff; font-weight: 500; margin-top: 20px; border-radius: 8px; background-color: #0093E9; background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%); cursor: pointer; transition: all ease-in 0.5s;}
+                body .telaLogin .login form button:hover {filter: brightness(110%);}
                 body .telaLogin .login svg {position: absolute; ;}
+
+            /* mensagem de erro ao logar*/
+            body .telaLogin .login form div .erroLogin {position: absolute; font-size: 10.5px; top: 95px; left: 24px; color: red;}
+                body .telaLogin .login form div .erroLogin em::before {content: ''; background: url(../img/icones/warning-circle.png) no-repeat center center; background-size: contain; width: 14px; height: 14px; position: absolute; bottom: 7px; left: -17px;}
+
+            /* Botão para mostrar/ esconder a senha */
+            body .telaLogin .login form div .buttonHidden {position: absolute; content: ''; width: 22px; height: 22px; background: url(../img/icones/eye.png) no-repeat center center; background-size: contain; top: 62px; right: 5px; transition: all 0.3s ease-in;}
+            body .telaLogin .login form div .buttonVisible {position: absolute; content: ''; width: 22px; height: 22px; background: url(../img/icones/eye-slash.png) no-repeat center center; background-size: contain; top: 62px; right: 5px; transition: all 0.3s ease-in;}
